# ic-regex

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package.json
src/example/: main.mo
src/regex/: Cargo.toml  regex.did
src/regex/src/: lib.rs
src/utils/: bench.ts
