[package]
name = "regex_ic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
dev = []

[dependencies]
candid = "0.8.4"
# latest working ic-kit is, unfortunately, unpublished
ic-kit = { path = "../../ic-kit/ic-kit"}
regex = "1.7.1"
serde = "1.0"
blake3 = "1.3.3"